Corrected some out of place divs, and a container location

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
 
 
 .container{
+    background-color: rgb(66, 66, 66);
     color: white;
     margin-left: 70px;
     margin-top: 50px;
@@ -18,6 +19,8 @@ body{
     height: 80%;
     width: 75%;
 }
+
+
 
 
 h1{
